--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="grid grid-cols-1 lg:grid-cols-2 px-8 md:px-10 lg:px-16 lg:h-screen">
         <div class="flex flex-col justify-center pt-10 lg:pt-0">
-            <h1 class="name text-[1.5rem] md:text-[3rem] lg:text-[3.5rem]">HI, I'M PRECIOUS</h1>
+            <h1 class="name text-[1.5rem] md:text-[3rem] lg:text-[3.5rem] font-bold">HI, I'M PRECIOUS</h1>
             <p class="text-[1.2rem] md:text-2xl lg:text-3xl">A Frontend Developer</p>
             <p class="text-sm lg:text-md">I'm passionate about building scalable solutions that are innovative and
                 user-centric. </p>
@@ -70,14 +70,13 @@
     <div class="py-12">
         <h5 class="text-center text-3xl mb-8 font-bold">PROJECTS</h5>
         <div class="grid lg:grid-cols-3 py-5">
-            <a href="https://melon-tan.vercel.app/"
-                class="outline outline-none border border-none my-5 md:my-3 lg:my-0">
+            <a href="https://raft-eta.vercel.app/" class="outline outline-none border border-none my-5 md:my-3 lg:my-0">
                 <div class="overflow-hidden">
                     <div class="project-img">
                         <img src="./img/raft.png" alt="raft" class="">
                     </div>
                 </div>
-                <p class="text-center mt-3">Melon</p>
+                <p class="text-center mt-3">Raft</p>
             </a>
             <a href="https://note-app-liart-eight.vercel.app/"
                 class="outline outline-none border border-none my-5 md:my-3 lg:my-0">
@@ -88,13 +87,14 @@
                 </div>
                 <p class="text-center mt-3">Note-app</p>
             </a>
-            <a href="#" class="outline outline-none border border-none my-5 md:my-3 lg:my-0">
+            <a href="https://melon-tan.vercel.app/"
+                class="outline outline-none border border-none my-5 md:my-3 lg:my-0">
                 <div class="overflow-hidden">
                     <div class="project-img">
                         <img src="./img/melon.png" alt="melon" class="">
                     </div>
                 </div>
-                <p class="text-center mt-3">Raft</p>
+                <p class="text-center mt-3">Melon</p>
             </a>
         </div>
     </div>
