--- a/index.html
+++ b/index.html
@@ -28,40 +28,40 @@
         <div class="flex flex-col justify-evenly py-8">
             <div class="flex justify-around">
                 <h6
-                    class="bg-gray-300 my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                    class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     HTML</h6>
                 <h6
-                    class="bg-gray-300 my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                    class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     CSS</h6>
             </div>
             <div class="flex justify-around">
                 <h6
-                    class="bg-gray-300 my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                    class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     SASS</h6>
                 <h6
-                    class="bg-gray-300 my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                    class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     Tailwind
                 </h6>
             </div>
             <div class="flex justify-center">
-                <h6 class="bg-gray-300 my-4 lg:my-0 text-center px-10 py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                <h6 class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center px-10 py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     Responsive
                     Design</h6>
             </div>
             <div class="flex justify-around">
                 <h6
-                    class="bg-gray-300 my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                    class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     JavaScript</h6>
                 <h6
-                    class="bg-gray-300 my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                    class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     Vue</h6>
             </div>
             <div class="flex justify-around">
                 <h6
-                    class="bg-gray-300 my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                    class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     NUXT</h6>
                 <h6
-                    class="bg-gray-300 my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
+                    class="bg-gray-300 hover:bg-black hover:text-white my-4 lg:my-0 text-center w-[130px] py-3 rounded rounded-lg drop-shadow-xl shadow-xl">
                     GIT</h6>
             </div>
         </div>
